Added a bit of formatting to index page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,10 +20,10 @@
         </div><!--//hero-slider-wrapper-->
         <div class="container promo-content">
             <h2 class="headline">Fag el-Gamous Cemetery Database <br> BYU Egypt Excavation Project</h2>
-            <p class="tagline">Good databasing is good research, check out our data!</p>
+            <p class="tagline">Having thorough records is a product of good research. Check out the data!</p>
             <div class="actions">
                 <!-- <a class="btn btn-cta btn-primary" href="#" data-bs-toggle="modal" data-bs-target="#signup">Burial Summary List & Records</a>-->
-                <a class="btn btn-cta btn-primary" asp-action="Burial">Burial Summary List & Records</a>
+                <a class="btn btn-cta btn-primary" asp-action="BurialList">Burial Summary List & Records</a>
                 <br class="d-sm-inline-block d-md-none">
                 <a href="#" class="video-play-trigger" data-bs-toggle="modal" data-bs-target="#modal-video"><img class="play-icon" src="assets/images/play-icon.svg" alt="">See mummification in action!</a>
             </div>
@@ -37,10 +37,10 @@
                 Why We Research
             </h2>
             <div class="section-intro">
-                Brigham Young University (BYU) has a 25 year history in Fag el-Gamous, located in Egypt. The research that is being
-                done in rich region has extreme importance in the archeological world. Research is currently being done on textiles,
-                osteology, mummy remains, gender, age, bone dimensions, hair color, burial depth, and more about the burials in
-                Fag el-Gamous.
+                Brigham Young University (BYU) has a 25 year history in Fag el-Gamous, located in Egypt. The information that is being
+                gathered in this rich region has an extreme importance in the archeological world. Research is currently being done in
+                various respects: textiles, osteology, mummy remains, gender, age, bone dimensions, hair color, burial depth, and many 
+                topics relating to the burials in Fag el-Gamous.
             </div><!--//section-intro-->
             <div class="figures-wrapper">
                 <div class="container text-center">
@@ -55,7 +55,8 @@
                                 <img class="item-icon" src="assets/images/icons/clock-white.svg" alt="">
                                 <h3 class="item-title">Time Sensitive Data</h3>
                                 <div class="item-desc">
-                                    Once a burial is dug up and gone, its gone forever. We ensure that our research is done in a time sensitive manner.
+                                    Once a burial has been dug up, it's gone forever.
+                                    We ensure that our ongoing research is done in a time-sensitive manner.
                                 </div>
                             </div><!--//item-inner-->
                         </div><!--//item-->
@@ -64,7 +65,8 @@
                                 <img class="item-icon" src="assets/images/icons/presenter-white.svg" alt="">
                                 <h3 class="item-title">Visualizing Data</h3>
                                 <div class="item-desc">
-                                    Having the tools to visualize data and easily record, share, and store it is vital to our mission in Fag el-Gamous. 
+                                    Having the tools necessary in visualizing data and easily recording, sharing, 
+                                    and storing that data is vital to our mission. 
                                 </div>
                             </div><!--//item-inner-->
                         </div><!--//item-->
@@ -73,7 +75,8 @@
                                 <img class="item-icon" src="assets/images/icons/chat-white.svg" alt="">
                                 <h3 class="item-title">Sharing is Caring</h3>
                                 <div class="item-desc">
-                                    At BYU we believe in sharing what we have found and documented for everyone benefit. When we work together, history unfolds itself to us. 
+                                    At BYU, we believe that sharing and documenting our findings benefits various
+                                    groups of people. When you work together, history tends to unfold itself.
                                 </div>
                             </div><!--//item-inner-->
                         </div><!--//item-->
