--- a/Views/Home/CreateBurial.cshtml
+++ b/Views/Home/CreateBurial.cshtml
@@ -45,23 +45,6 @@
                                 </div>
                                 <hr />
 
-                                <!--Row 1.2-->
-                                <!--<div class="form-group row" style="margin-bottom: 10px!important;justify-content:center!important">-->
-                                    <!--Burial N/S item-->
-                                    <!--<div class="col-sm-3">
-                                        <label asp-for="BurialId" class="col-sm-6 col-form-label text-right" style="text-align: left !important;width: 100%!important;padding-left:0px!important;font-weight:normal!important">Burial ID</label>
-                                        <input class="form-control" style="height: 35px!important; font-size: 14px!important;" asp-for="BurialId" type="number" />
-                                        <span class="text-danger pl-3" asp-validation-for="BurialId"></span>
-                                    </div>-->
-
-                                    <!--Hidden item-->
-                                    <!--<div class="col-sm-3" style="visibility:hidden"></div>-->
-
-                                    <!--Hidden item-->
-                                    <!--<div class="col-sm-3" style="visibility:hidden"></div>
-
-                                </div>-->
-
                                 <!--Row 1-->
                                 <div class="form-group row" style="margin-bottom: 10px!important;justify-content:center!important">
                                     <!--Burial N/S item-->
@@ -242,6 +225,16 @@
 
                                     <!--Hidden item-->
                                     <div class="col-sm-3" style="visibility:hidden"></div>
+                                </div>
+
+                                <!--Row 9-->
+                                <div class="form-group row" style="margin-bottom: 10px!important;margin-left:122px!important">
+                                    <!--Notes item-->
+                                    <div class="col-sm-10">
+                                        <label asp-for="Notes" class="col-sm-6 col-form-label text-left" style="text-align: left !important;width: 100%!important;padding-left:0px!important;font-weight:normal!important">Field Notes</label>
+                                        <input class="col-sm-6 form-control" style="height: 35px!important; font-size: 14px!important;" asp-for="Notes" type="text" />
+                                        <span class="text-danger pl-3" asp-validation-for="Notes"></span>
+                                    </div>
                                 </div>
 
                                 <button class="button btn btn-lg btn-light px-4 pt-2 float-right" style="font-size:medium!important;margin:10px!important">Submit</button>
