Added Tableau images

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
                 <!-- <a class="btn btn-cta btn-primary" href="#" data-bs-toggle="modal" data-bs-target="#signup">Burial Summary List & Records</a>-->
                 <a class="btn btn-cta btn-primary" asp-action="BurialList">Burial Summary List & Records</a>
                 <br class="d-sm-inline-block d-md-none">
-                <a href="#" class="video-play-trigger" data-bs-toggle="modal" data-bs-target="#modal-video"><img class="play-icon" src="assets/images/play-icon.svg" alt="">See mummification in action!</a>
+                <a href="" class="video-play-trigger" data-bs-toggle="modal" data-bs-target="#modal-video"><img class="play-icon" src="assets/images/play-icon.svg" alt="">See mummification in action!</a>
             </div>
         </div><!--//container-->
     </section><!--//promo-section-->
@@ -91,15 +91,15 @@
             <div id="feature-block-1" class="feature-block feature-block-1">
                 <div class="row g-5">
                     <div class="feature-content col-xl-5 col-lg-4 col-md-6 col-12">
-                        <h3 class="feature-title">Feature One Heading</h3>
+                        <h3 class="feature-title">Burials by Month</h3>
                         <div class="feature-desc">
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </p>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, <a class="text-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/product/appify-bootstrap-4-admin-template-for-app-developers/" target="_blank">Screenshot: Appify Bootstrap 4 Admin Theme</a> consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+                            <p>It's simply amazing to look and see 114 years worth of excavation data. We notice that in the past, many excavations were being performed as opposed to more recently, there's been less.
+                            The information that is stored and excavated within each burials can tell us a different story about that generation and the ways they used to live.</p>
                         </div><!--//feature-desc-->
                     </div><!--//feature-content-->
                     <div class="feature-figure col-xl-7 col-lg-8 col-md-6 col-12 text-md-end">
                         <div class="figure-holder">
-                            <img class="img-fluid" src="assets/images/features/feature-1.jpg" alt="">
+                            <img class="img-fluid" src="~/img/burials_by_month.png" alt="Burials by Month Image" height="650" width="800">
                         </div><!--//figure-holder-->
                     </div>
                 </div><!--//row-->
@@ -107,15 +107,15 @@
             <div id="feature-block-2" class="feature-block feature-block-2">
                 <div class="row g-5">
                     <div class="feature-content col-xl-5 col-lg-4 col-md-6 col-12 order-md-5 order-1">
-                        <h3 class="feature-title">Feature Two Heading</h3>
+                        <h3 class="feature-title">Burials by Wrapping</h3>
                         <div class="feature-desc">
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </p>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, <a class="text-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/product/appify-bootstrap-4-admin-template-for-app-developers/" target="_blank">Screenshot: Appify Bootstrap 4 Admin Theme</a> consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+                            <p>Have you ever wondered how most mummies are wrapped? Well look no further. It's important to note that we consistently get good data on this (see the low number of "unkown"),
+                            so we believe it to be pretty accurate. Most mummies are found to be either be wrapped fully or not wrapped at all, very few are partially wrapped.</p>
                         </div><!--//feature-desc-->
                     </div><!--//feature-content-->
                     <div class="feature-figure col-xl-7 col-lg-8 col-md-6 col-12 order-md-1 order-5">
                         <div class="figure-holder">
-                            <img class="img-fluid" src="assets/images/features/feature-2.jpg" alt="">
+                            <img class="img-fluid" src="~/img/burials_by_wrapping.png" alt="Burials by Wrapping Image" height="800" width="650">
                         </div><!--//figure-holder-->
                     </div>
                 </div><!--//row-->
@@ -123,36 +123,19 @@
             <div id="feature-block-3" class="feature-block feature-block-3">
                 <div class="row g-5">
                     <div class="feature-content col-xl-5 col-lg-4 col-md-6 col-12">
-                        <h3 class="feature-title">Feature Three Heading</h3>
+                        <h3 class="feature-title">Burial Depth by Gender</h3>
                         <div class="feature-desc">
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </p>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, <a class="text-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/product/appify-bootstrap-4-admin-template-for-app-developers/" target="_blank">Screenshot: Appify Bootstrap 4 Admin Theme</a> consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
+                            <p>How about the depth in which different mummies are buried? We pulled an interesting statistic that helped us see into this. Male are, on average, buried .3 meters
+                            deeper than their counterpart females. Why is this? Does it have religious origins? Is it tradition? Continue exploring our data to find out more!</p>
                         </div><!--//feature-desc-->
                     </div><!--//feature-content-->
                     <div class="feature-figure col-xl-7 col-lg-8 col-md-6 col-12 text-md-end">
                         <div class="figure-holder">
-                            <img class="img-fluid" src="assets/images/features/feature-3.jpg" alt="">
+                            <img class="img-fluid" src="~/img/burial_depth_by_gender.png" alt="Burial Depth by Gender Image" height="800" width="650">
                         </div><!--//figure-holder-->
                     </div>
                 </div><!--//row-->
             </div><!--//feature-block-3-->
-            <div id="feature-block-4" class="feature-block feature-block-4">
-                <div class="row g-5">
-                    <div class="feature-content col-xl-5 col-lg-4 col-md-6 col-12 order-md-5 order-1">
-                        <h3 class="feature-title">Feature Four Heading</h3>
-                        <div class="feature-desc">
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. </p>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, <a class="text-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/product/appify-bootstrap-4-admin-template-for-app-developers/" target="_blank">Screenshot: Appify Bootstrap 4 Admin Theme</a> consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-                        </div><!--//feature-desc-->
-                    </div><!--//feature-content-->
-                    <div class="feature-figure col-xl-7 col-lg-8 col-md-6 col-12 order-md-1 order-5">
-                        <div class="figure-holder">
-                            <img class="img-fluid" src="assets/images/features/feature-4.jpg" alt="">
-                        </div><!--//figure-holder-->
-                    </div>
-                </div><!--//row-->
-            </div><!--//feature-block-4-->
-
         </div><!--//feature-blocks-->
 
         <section class="apps-section section text-center">
