Updated the data to reflect meters

--- a/Views/Home/BurialDetails.cshtml
+++ b/Views/Home/BurialDetails.cshtml
@@ -255,6 +255,22 @@
                                     <div class="col-sm-3"><p style="margin-bottom:0px!important;"><b>Textile Taken:</b> @Model.TextileTaken</p></div>
                                     <div class="col-sm-3"><p style="margin-bottom:0px!important;"><b>Field Notes:</b> @Model.Notes</p></div>
                                 </div>
+
+                                <!--Row 31-->
+                                <div class="form-group row mt-5" style="margin-bottom:15px!important;margin-left:20px!important;margin-right:10px!important">
+                                    <div class="col-sm-3">
+                                        <p style="margin-bottom:0px!important;"><b>Photo:</b></p>
+                                        <img class="img-fluid" src="~/img/skull.png" alt="Burial Image" style="width:300px;height:300px">
+                                    </div>
+                                    <div class="col-sm-3">
+                                        <p style="margin-bottom:0px!important;"><b>Field Notes:</b></p>
+                                        <img class="img-fluid" src="~/img/skull.png" alt="Burial Image" style="width:300px;height:300px">
+                                    </div>
+                                    <div class="col-sm-3">
+                                        <p style="margin-bottom:0px!important;"><b>Bone Books:</b></p>
+                                        <img class="img-fluid" src="~/img/skull.png" alt="Burial Image" style="width:300px;height:300px">
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
